--- a/runway/styles/style.css
+++ b/runway/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .body-main {
   background: url(../misc/bg.png) no-repeat top center;
   background-size: cover;
@@ -7,10 +8,19 @@ h2, h1, h3, h4 {
   margin: 0px; }
 
 html, body {
-  font-size: 13px; }
+  font-size: 13px;
+  font-family: "STZhongsong","宋体","微软雅黑"; }
+  @media all and (min-height: 587px) {
+    html, body {
+      height: 100%; }
+      html .body-main, body .body-main {
+        height: 100%; } }
 
 .body-main {
   padding: 50px 20px 75px 20px; }
+  @media screen and (min-width: 375px) {
+    .body-main {
+      padding: 50px 40px 75px 40px; } }
   .body-main .title {
     width: 80%;
     margin: 0 auto; }
@@ -22,11 +32,11 @@ html, body {
   text-align: center; }
   .index-body-main .desc p {
     font-size: 21px;
-    text-align: center;
-    font-family: "stzhongsong"; }
+    text-align: center; }
+    .index-body-main .desc p img {
+      width: 100%; }
   .index-body-main .desc a {
     font-size: 15px;
-    font-family: "stzhongsong";
     display: inline-block;
     text-align: center;
     margin-top: 15px;
@@ -46,11 +56,13 @@ html, body {
     padding: 0px;
     padding-left: 36px;
     background: #fff; }
+  .reg-form .ui-selectmenu-button.select {
+    color: #000; }
   .reg-form .ui-selectmenu-icon {
     position: absolute;
     right: 10px;
     top: 14px;
-    background: url(../misc/arrow-down.png);
+    background: url(../misc/arrow-down.png) !important;
     background-repeat: no-repeat;
     width: 13px;
     height: 7px; }
@@ -59,7 +71,9 @@ html, body {
     border: 1px solid #777069;
     margin-bottom: 13px; }
     .reg-form .input-wrap.action-wrap {
-      margin-top: 60px; }
+      margin-top: 60px;
+      text-align: center;
+      border: none; }
   .reg-form label {
     font-size: 13px;
     height: 36px;
@@ -70,6 +84,8 @@ html, body {
     left: 0px;
     top: 0px;
     z-index: 1; }
+    .reg-form label.label-phone {
+      color: #b8b8b8; }
   .reg-form input, .reg-form select {
     box-sizing: border-box;
     line-height: 36px;
@@ -86,7 +102,9 @@ html, body {
     line-height: 36px;
     height: 36px;
     width: 100%;
-    color: #fff; }
+    color: #fff;
+    line-height: 34px;
+    width: 120px; }
 
 .hfull {
   height: 100%; }
@@ -96,26 +114,38 @@ html, body {
   .success-body-main .success {
     margin-top: 144px;
     text-align: center;
-    font-size: 18px;
-    font-family: "stzhongsong"; }
+    font-size: 18px; }
   .success-body-main .action-wrap {
-    margin-top: 30px; }
+    margin-top: 30px;
+    text-align: center; }
   .success-body-main button {
     background: #000;
     border: none;
     line-height: 36px;
     height: 36px;
     width: 100%;
-    color: #fff; }
+    color: #fff;
+    line-height: 34px;
+    width: 120px; }
 
 .rule-body-main {
   height: 100%;
   padding-bottom: 115px; }
   .rule-body-main .rule {
     margin-top: 72px;
-    text-align: left; }
+    text-align: left;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto; }
     .rule-body-main .rule .inner {
       margin-bottom: 37px; }
+    .rule-body-main .rule ul {
+      list-style-type: none;
+      font-size: 16px;
+      line-height: 150%;
+      list-style-position: inside;
+      padding-left: 0px;
+      margin-left: 0px; }
     .rule-body-main .rule h3 {
       font-size: 21px;
       text-align: center;
@@ -127,10 +157,14 @@ html, body {
     .rule-body-main .rule span {
       font-size: 13px;
       color: #ccc; }
+    .rule-body-main .rule .action-wrap {
+      text-align: center; }
     .rule-body-main .rule button {
       background: #000;
       border: none;
       line-height: 36px;
       height: 36px;
       width: 100%;
-      color: #fff; }
+      color: #fff;
+      line-height: 34px;
+      width: 120px; }
